--- a/static/main/css/ChatBot/chatbot.css
+++ b/static/main/css/ChatBot/chatbot.css
@@ -35,10 +35,16 @@
   width: 400px;
   height: 85vh;
   padding: 15px;
-  border: 1px solid var(--greenFull3);
-  border-radius: 4px;
+  border-radius: 25px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  background: black;
+  background: linear-gradient(
+    21deg,
+    rgba(123, 219, 128, 1) 0%,
+    rgba(44, 131, 49, 1) 18%,
+    rgba(5, 60, 8, 1) 37%,
+    rgba(0, 32, 2, 1) 54%,
+    rgba(0, 0, 0, 1) 71%
+  );
   display: flex;
   flex-direction: column;
   z-index: 2001;
@@ -106,6 +112,7 @@
   display: flex;
   padding: 10px;
   border-top: 1px solid #ccc;
+  color: white;
 }
 
 .chatbot-input input {
@@ -115,8 +122,7 @@
   border-radius: 3px;
   margin-right: 5px;
   color: white;
-  background: transparent;
-  font-family: var(--third);
+  background: var(--borderInputs);  font-family: var(--third);
   text-align: center;
 }
 
@@ -186,7 +192,7 @@
     border: none;
   }
 
-  .chatbot-toggle{
+  .chatbot-toggle {
     display: none;
   }
 }
