--- a/static/main/css/Login/login.css
+++ b/static/main/css/Login/login.css
@@ -16,9 +16,12 @@
   background-color: rgba(0, 0, 0, 0);
 }
 .third-line {
-  margin-top: 7px;
+  align-items: center;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 10px;
+  
   p {
     text-align: center;
     font-weight: bold;
@@ -119,39 +122,31 @@
 .submit-button {
   position: relative;
   border: none;
-  width: 190px;
+  width: 100%;
   border-radius: 5px;
-  padding: 0;
   background-color: white;
   color: black;
   transition: 0.2s;
-  padding: 4px 15px;
+  padding: 15px 30px;
   cursor: pointer;
   font-family: var(--main);
   font-weight: bold;
-  text-align: right;
-  margin-top: 10px;
+  text-align: center;
+}
+
+.submit-button:nth-child(1) {
+  margin-top: 15px;
 }
 
 .submit-button > img {
   width: 35px;
   position: absolute;
-  left: -10px;
-  top: -5px;
+  left: 5px;
+  top: 5px;
 }
 .submit-button:hover {
   background-color: var(--greenFull2);
 }
-
-/* #link-to-login-register {
-  color: var(--greenFull3);
-  transition: 0.3s;
-}
-
-#link-to-login-register:hover {
-  transition: 0.3s;
-  color: var(--greenFull2);
-} */
 
 /* ESTILOS COMPARTIDOS CON REGISTER */
 #logo-auth-container {
@@ -173,4 +168,14 @@
   color: var(--greenFull3);
   font-size: 35px;
   font-weight: bolder;
+}
+
+@media (max-width: 668px) {
+  #form-login {
+    width: auto;
+  }
+
+  #close-modal-login {
+    bottom: 10px;
+  }
 }
