--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -8,7 +8,7 @@
   --greenFull1: #9df01a;
   --greenFull2: #70e000;
   --greenFull3: #38b000;
-  --blackPanel: rgb(37, 37, 37);
+  --blackPanel: rgb(10, 10, 10);
   --panel2: rgb(75, 75, 75);
   --blueBtns: #0d64de;
   --blueBtns2: #3e8fff;
@@ -43,7 +43,8 @@
   * {
     border: 1px solid gold;
   } */
-  ´ select {
+
+   select {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -64,7 +65,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(37, 37, 37);
+  background: rgb(79, 79, 79);
 }
 
 body {
@@ -105,61 +106,65 @@ body {
 /* Estilos para el chatbot */
 
 #titleSuggestions {
+  margin: 1rem 0;
   padding: 1rem;
+  background: var(--inputs);
+  border-radius: 4px;
 }
 
 #title-suggestion-container {
   font-family: var(--main);
   font-weight: bold;
-  font-size: 1.5rem;
-  color: var(--greenFull3);
+  font-size: 1.2rem;
   text-align: left;
   padding-bottom: 1.5rem;
   position: relative;
+  filter: drop-shadow(2px 4px 6px black);
 }
 
 #title-suggestion-container > i {
   position: absolute;
-  left: -30px;
+  left: 170px;
   top: 2px;
   filter: drop-shadow(2px 4px 6px black);
 }
 
 .suggestion-item {
-  cursor: pointer;
   padding: 5px;
-  border: 2px solid transparent;
-  border-radius: 3px;
+  border-bottom: 2px solid var(--panel2);
   margin-top: 5px;
-  background-color: var(--blueBtns);
-  color: #ffffff;
+  background-color: transparent;
+  color: var(--greenFull3);
   transition: border 0.5s;
   position: relative;
-  padding: 0.6rem;
+  padding: 16px;
   font-family: var(--main);
   font-weight: 300;
 }
 
-.suggestion-item:hover {
-  /* border-image: linear-gradient(
-      45deg,
-      var(--greenFull1),
-      var(--greenFull2),
-      var(--greenFull3),
-      var(--inputs)
-    )
-    1; */
-  background-color: var(--greenFull3);
-}
-
 .suggestion-item > i {
+  cursor: pointer;
+
   position: absolute;
   top: 10px;
   right: 5px;
+  background: var(--greenFull3);
+  color: white;
+  border: 1px solid transparent;
+
+  border-radius: 2px;
+  padding: 8px;
+  box-shadow: 1px 1px 5px black;
+}
+
+.suggestion-item > i:hover {
+  box-shadow: none;
+  color: black;
+  background-color: var(--greenFull1);
+  border: 1px solid var(--blackPanel);
 }
 
 /* mensaje de usuario o contraseña incorrecta*/
-
 
 .d-grid {
   display: flex;
@@ -486,7 +491,7 @@ button:hover #clip {
 
 #price-plan {
   font-weight: bold;
-  font-family: var(--second);
+  font-family: var(--third);
   font-size: 30px;
   width: fit-content;
   text-align: right;
@@ -587,7 +592,6 @@ button:hover #clip {
   }
 }
 
-
 .tab-pane {
   animation: fadeIn 0.5s ease-in-out;
 }
@@ -609,24 +613,6 @@ button:hover #clip {
   } */
 }
 
-.box-title-content {
-  margin-top: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  width: 90%;
-}
-
-.box-title-content > h3 {
-  text-align: center;
-  font-size: 35px;
-  font-family: var(--main);
-  font-weight: bolder;
-  padding: 40px 0;
-  color: white;
-}
-
 #inProgressTasks {
   width: 100%;
   display: flex;
@@ -643,15 +629,25 @@ button:hover #clip {
 /* BARRA DE CARGA */
 
 .progress-container {
-  width: 70%;
-  height: 20px;
-  background-color: var(--inputs);
+  width: 100%;
+  height: 10px;
   border-radius: 2px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  border-radius: 10px;
+  background-color: var(--inputs);
+}
+
+#progress-percentage {
+  padding: 1rem;
+  color: var(--greenFull1);
+  font-family: var(--four);
 }
 
 .progress-bar {
-  height: 100%;
+  height: 10px;
   width: 0%;
   background: radial-gradient(
     circle,
@@ -660,9 +656,9 @@ button:hover #clip {
     var(--greenFull3) 90%
   );
   background-size: 200% 200%;
-  animation: vaiven 3s infinite, brillo 1.5s ease-in-out infinite;
-  border-radius: 2px;
-  transition: width 0.3s ease;
+  animation: vaiven 3s infinite, brillo 1.5sease-in-out infinite;
+  border-radius: 10px;
+  transition: width 0.3sease;
 }
 
 @keyframes vaiven {
@@ -693,11 +689,11 @@ button:hover #clip {
 #inProgressTasks > span {
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 10px;
   padding: 10px;
   border-radius: 5px;
   width: 100%;
+  background: var(--panel2);
 }
 
 #inProgressTasks > span > p {
@@ -745,7 +741,7 @@ button:hover #clip {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 90%;
+  width: 100%;
   height: 60vh;
   position: relative;
   padding: 0 0 30px 0;
@@ -755,23 +751,17 @@ button:hover #clip {
 #videosList > h4 {
   left: 0;
   top: -10px;
-
-  /* adkjskda */
-  /* adkjskda */
-  /* adkjskda */
-  /* adkjskda */
   font-size: 25px;
   font-weight: bolder;
   font-family: var(--main);
   width: 100%;
   text-align: right;
-
   position: relative;
   border-bottom: 1px solid var(--borderInputs);
   background-color: transparent;
   color: white;
   cursor: text;
-  margin: 0 auto;
+  margin-top: 20px;
   transition: 0.5s all;
   display: flex;
   justify-content: space-between;
@@ -798,7 +788,7 @@ button:hover #clip {
 }
 
 #videos-store {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -862,6 +852,7 @@ button:hover #clip {
   box-shadow: none;
   overflow-y: scroll;
   padding: 30px;
+  width: 90%;
 }
 
 .close-existing {
@@ -893,11 +884,26 @@ button:hover #clip {
 
 @media (max-width: 968px) {
   .suggestion-item > i {
-    right: -20px;
+    display: none;
   }
 }
 @media (max-width: 668px) {
-  .box-title-content > h3 {
-    padding: 70px 0;
+  .suggestion-item:hover {
+    background-color: var(--panel2);
+  }
+
+  .open-existing {
+    height: 100%;
+    border-radius: 2px;
+    box-shadow: none;
+    overflow-y: scroll;
+    padding: 30px;
+    width: 95%;
+    padding: 10px;
+  }
+
+  .video-item > video {
+    width: 98%;
+    height: 250px;
   }
 }
